--- a/ZwischenPraesentation1/main.tex
+++ b/ZwischenPraesentation1/main.tex
@@ -8,7 +8,7 @@
 \setbeamertemplate{navigation symbols}{}%remove navigation symbols
 \setbeamertemplate{blocks}[rounded][shadow=true]
 \title{Projektarbeit f\"ur Vorlesung Spieleprogrammierung}
-\author{Simon Bausch}
+\author{Simon Bausch, Florian Sorg}
 \institute{Hochschule Aalen}
 \newcommand*\oldmacro{}%
 \let\oldmacro\insertshorttitle%
@@ -25,21 +25,20 @@
 	\tableofcontents
 \end{frame}
 
-\section{Gruppenmitglieder}
-\begin{frame}
-	TODO
-\end{frame}
-
 \section{Idee}
 \begin{frame}
 	\begin{itemize}
 		\item
-			XXX -- with a twist!
-		\item
-			Genre: Jump \& Run
+			Genre: 3D Jump \& Run
 		\item
 			Twist: Einsammeln von Items "andert die
 			Richtung der Schwerkraft
+		\item
+			Rätsel/Geschicklichkeit - Nicht herunterfallen, etc...
+		\item
+			Ziel: Finde den Weg zu einem bestimmten Punkt.
+		\item
+			Eventuell mehrere Lösungswege
 	\end{itemize}
 \end{frame}
 
@@ -49,15 +48,51 @@
 		\item
 			Engine: Unity 3D
 		\item
-			So einige Models, Animationen, ...
+			Vorteile:
+			\begin{itemize}
+				\item So einige Models, Animationen, ...
 			sind vordefiniert im ``Asset Store''
 			verf"ugbar.
+				\item ``Kostenlos''
+				\item Platformunabh"angig
+				\item Gut dokumentiert (google)
+			\end{itemize}
+			\item
+			Nachteile:
+			\begin{itemize}
+				\item ``Dont call us, we'll call you'' - Wenig Kontrolle
+				\item Großer Overhead
+				\item Performance könnte besser sein
+			\end{itemize}
 	\end{itemize}
 \end{frame}
 
 \section{Zeitplan}
 \begin{frame}
-	TODO
+	\begin{itemize}
+		\item 20.03.2015 - 24.04.2105 - Ideenfindung und Konzepterarbeitung
+		\item 24.04.2015 - Erste Zwischenpräsentation
+		\item 24.04.2015 - 05.06.2015 - Feinere Ausarbeitung, erste Prototypen
+		\item 04.06.2015 - \emph{Alpha}
+		\item 05.06.2015 - Zweite Zwischenpräsentation
+		\item 05.06.2015 - 03.07.2015 - Implementierung
+		\item 02.07.2015 - \emph{Beta}
+		\item 03.07.2015 - Abschlusspräsentation
+		\item 16.07.2015 - Abgabe
+	\end{itemize}
+\end{frame}
+
+\section{Demo}
+\begin{frame}
+	\begin{center}
+		Demo
+	\end{center}
+\end{frame}
+
+\begin{frame}
+	\begin{center}
+		Vielen Dank f"ur Ihre Aufmerksamkeit!
+	\end{center}
 \end{frame}
 
 \end{document}
