--- a/ZwischenPraesentation1/main.tex
+++ b/ZwischenPraesentation1/main.tex
@@ -34,52 +34,60 @@
 			Twist: Einsammeln von Items "andert die
 			Richtung der Schwerkraft
 		\item
-			Rätsel/Geschicklichkeit - Nicht herunterfallen, etc...
+			R"atsel/Geschicklichkeit -- Nicht herunterfallen, etc...
 		\item
 			Ziel: Finde den Weg zu einem bestimmten Punkt.
 		\item
-			Eventuell mehrere Lösungswege
+			eventuell mehrere L"osungswege
 	\end{itemize}
 \end{frame}
 
 \section{Eingesetzte Software}
 \begin{frame}
 	\begin{itemize}
-		\item
-			Engine: Unity 3D
-		\item
-			Vorteile:
+		\item Engine: Unity 3D
+		\item Vorteile:
 			\begin{itemize}
-				\item So einige Models, Animationen, ...
-			sind vordefiniert im ``Asset Store''
-			verf"ugbar.
-				\item ``Kostenlos''
-				\item Platformunabh"angig
-				\item Gut dokumentiert (google)
+				\item
+					So einige Models, Animationen, ...
+					sind vordefiniert im ``Asset Store''
+					verf"ugbar.
+				\item ``kostenlos''
+				\item platformunabh"angig
+				\item gut dokumentiert (Google)
 			\end{itemize}
-			\item
-			Nachteile:
+		\item Nachteile:
 			\begin{itemize}
-				\item ``Dont call us, we'll call you'' - Wenig Kontrolle
-				\item Großer Overhead
-				\item Performance könnte besser sein
+				\item ``Dont call us, we'll call you'' -- wenig Kontrolle
+				\item gro"ser Overhead
+				\item Performance k"onnte besser sein
 			\end{itemize}
 	\end{itemize}
 \end{frame}
 
 \section{Zeitplan}
 \begin{frame}
-	\begin{itemize}
-		\item 20.03.2015 - 24.04.2105 - Ideenfindung und Konzepterarbeitung
-		\item 24.04.2015 - Erste Zwischenpräsentation
-		\item 24.04.2015 - 05.06.2015 - Feinere Ausarbeitung, erste Prototypen
-		\item 04.06.2015 - \emph{Alpha}
-		\item 05.06.2015 - Zweite Zwischenpräsentation
-		\item 05.06.2015 - 03.07.2015 - Implementierung
-		\item 02.07.2015 - \emph{Beta}
-		\item 03.07.2015 - Abschlusspräsentation
-		\item 16.07.2015 - Abgabe
-	\end{itemize}
+	\begin{tabular}{|l|l|}
+		\hline
+		20.03. - 24.04. & Ideenfindung und Konzepterarbeitung\\
+		\hline
+		24.04. & erste Zwischenpr"asentation\\
+		\hline
+		24.04. - 05.06. & feinere Ausarbeitung, erste Prototypen\\
+		\hline
+		04.06. & \textbf{Alpha}\\
+		\hline
+		05.06. & zweite Zwischenpr"asentation\\
+		\hline
+		05.06. - 03.07. & Implementierung\\
+		\hline
+		02.07. & \textbf{Beta}\\
+		\hline
+		03.07. & Abschlusspr"asentation\\
+		\hline
+		16.07. & Abgabe\\
+		\hline
+	\end{tabular}
 \end{frame}
 
 \section{Demo}
