--- a/ZwischenPraesentation1/main.tex
+++ b/ZwischenPraesentation1/main.tex
@@ -7,7 +7,7 @@
 \useoutertheme[footline=authortitle]{miniframes}
 \setbeamertemplate{navigation symbols}{}%remove navigation symbols
 \setbeamertemplate{blocks}[rounded][shadow=true]
-\title{Projektarbeit f\"ur Vorlesung Spieleprogrammierung}
+\title{Spieleprogrammierung -- Zwischenpräsentation 1}
 \author{Simon Bausch, Florian Sorg}
 \institute{Hochschule Aalen}
 \newcommand*\oldmacro{}%
@@ -25,7 +25,7 @@
 	\tableofcontents
 \end{frame}
 
-\section{Idee}
+\section{Spielidee}
 \begin{frame}
 	\begin{itemize}
 		\item
@@ -39,6 +39,8 @@
 			Ziel: Finde den Weg zu einem bestimmten Punkt.
 		\item
 			eventuell mehrere L"osungswege
+		\item
+			Die Story muss noch ausgearbeitet/ausgedacht werden.
 	\end{itemize}
 \end{frame}
 
@@ -49,7 +51,7 @@
 		\item Vorteile:
 			\begin{itemize}
 				\item
-					So einige Models, Animationen, ...
+					Einige Models, Animationen, ...
 					sind vordefiniert im ``Asset Store''
 					verf"ugbar.
 				\item ``kostenlos''
