outline in DesignDocument/implementation.tex

--- a/DesignDocument/implementation.tex
+++ b/DesignDocument/implementation.tex
@@ -7,39 +7,47 @@ entwickelten Computerspiels.
 \subsection{Kartengestaltung}
 \label{sec:implementation/maps}
 %
+% Boxes, kill zone of boxes (killZone tag), target zone (targetZone tag)
 TODO.
 %
 \subsection{Schwerkraft"anderung}
 \label{sec:implementation/gravity}
 %
+% gravArrow tag, GravitationOrientation component, boost, ...
 TODO.
 %
 \subsection{Spielfigur}
 \label{sec:implementation/avatar}
+% ThirdPersonCharacter.cs, ThirdPersonUserControl.cs, PlayerCtlBehavior.cs
 %
 TODO.
 %
 \subsection{Steuerung}
 \label{sec:implementation/controls}
 %
+% ThirdPersonCharacter.cs
 TODO.
 %
 \subsection{Kamera}
 \label{sec:implementation/camera}
+% MultiPurposeCameraRig
 %
 TODO.
 %
 \subsection{Schwerkraftpfeile}
 \label{sec:implementation/arrows}
+% ...
 %
 TODO.
 %
 \subsection{Game Over}
 \label{sec:implementation/gameover}
+% ...
 %
 TODO.
 %
 \subsection{Men"us und Levelfolge}
 \label{sec:implementation/menus}
+% HandleMessages.cs
 %
 TODO.
