--- a/DesignDocument/main.tex
+++ b/DesignDocument/main.tex
@@ -4,12 +4,14 @@
 \usepackage{epstopdf}
 %\usepackage{amsfonts}
 %\usepackage{amssymb}
+\usepackage[usenames,dvipsnames]{color}
 \usepackage{listings}
 \lstset{numbers=left, numberstyle=\tiny, numbersep=5pt}
 \lstset{language=C++}
+\lstset{keywordstyle=\color{ForestGreen}, commentstyle=\color{Fuchsia}, stringstyle=\color{NavyBlue}}
 \usepackage{hyperref}
 \usepackage{nameref}
-\usepackage{xcolor}
+%\usepackage{xcolor}
 %\usepackage{tikz}
 %\usetikzlibrary{arrows,shapes,snakes,automata,backgrounds,petri,decorations.markings}
 %\usepackage{gensymb}
@@ -29,8 +31,8 @@
 %\clearpage
 %\listoftables
 %\clearpage
-%\lstlistoflistings
-%\clearpage
+\lstlistoflistings
+\clearpage
 \setcounter{page}{1}
 \pagenumbering{arabic}
 %
