--- a/DesignDocument/intro.tex
+++ b/DesignDocument/intro.tex
@@ -25,7 +25,7 @@ Prototyps zu erm"oglichen.
 \label{sec:intro/idea}
 Der Ansatz zur Ideenfindung war, einem der ``Klassiker'' der Videospielwelt neues
 Leben einzuhauchen, indem man einen ``Twist'' (also eine unerwartete ``Wende'';
-in diesem Fall eine Eigenheit des Spielmachanik) hinzuf"ugt. Die Wahl fiel auf
+in diesem Fall eine Eigenheit des Spielmechanik) hinzuf"ugt. Die Wahl fiel auf
 ein klassisches Jump and Run -- der naheliegende Twist ist daher, die Grundlage eben
 dieses Laufens und Springens zu beeinflussen. Der wohl grundlegendste Aspekt hiervon
 ist die Schwerkraft.
@@ -37,7 +37,7 @@ die \textit{M"oglichkeit} gegeben werden, diese Kontrolle auszu"uben. Die Heraus
 verschiebt sich hierdurch: Anstatt gegen die Schwerkraft"anderung zu ``k"ampfen'',
 muss der Spieler diese geschickt einsetzten, um seine Ziele zu erreichen.
 
-Um die Kontrolle "uber die Schwerkraft dem Spiele zu "uberlassen, daber diese
+Um die Kontrolle "uber die Schwerkraft dem Spieler zu "uberlassen, aber diese
 Kontrolle dennoch einzuschr"anken, wurde folgendes Konzept erdacht: In jedem
 Level sind im Voraus Pfeile plaziert, welche als aufsammelbare ``Items''
 fungieren. Wenn der Spieler einen solchen Pfeil aufsammelt, so "andert sich
@@ -60,6 +60,6 @@ dementsprechend in der Programmiersprache C\# geschrieben.
 
 Soll der Prototyp weiterentwickelt oder eingesehen werden, wird daher Unity 3D
 ben"otigt. Durch die eingebaute Distribution des Mono-Projekts sind sowohl
-Entwicklungswerkzeuge (Toolchain; inspesondere Compiler und Linker) f"ur C\#
+Entwicklungswerkzeuge (Toolchain; insbesondere Compiler und Linker) f"ur C\#
 dort bereits enthalten. Mit MonoDevelop enth"alt Unity 3D auch bereits eine
 Entwicklungsumgebung f"ur Microsoft .NET (und damit auch C\#).
